<resources>
    <string name="app_name">Weather App</string>
    <string name="_2_m_s">2 m/s</string>
    <string name="forecast">forecast</string>
    <string name="_6_c">6 C</string>
    <string name="sunny">sunny</string>
    <string name="enter_city_name_here">Enter City Name Here</string>
    <string name="update">update</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="city_name_here">city_name_here</string>
    <string name="enter_country_code_optional">Enter country code (optional)</string>
    <string name="get_weather">Get Weather</string>
    <string name="Longitude">Longitude</string>
    <string name="Latitude">Latitude</string>
    <string name="tampere">Tampere</string>


</resources>